syntax = "proto3";

package chat;

option go_package = "tiktok/chat";

service tiktokChatService {
  rpc PingPong(Request1) returns (Response){};
}

message Response{
    string message = 1;
}

message Request1{
        string message = 1;
}